--- a/app/src/main/res/layout/activity_wenzi.xml
+++ b/app/src/main/res/layout/activity_wenzi.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,7 @@
     tools:context=".Student.Activity.WenziActivity">
 
     <RelativeLayout
+        android:id="@+id/head"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/gradual_change"
@@ -48,17 +49,15 @@
             android:textColor="#ffffff"
             android:textSize="19dp" />
 
-        <TextView
-            android:id="@+id/tv_commit"
+        <ImageButton
+            android:id="@+id/ib_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:text="提交"
-            android:textColor="#ffffff"
-            android:textSize="17dp" />
+            android:background="@mipmap/icon_white_more" />
 
     </RelativeLayout>
 
@@ -66,6 +65,7 @@
         android:id="@+id/et_wenzi"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_below="@+id/head"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
@@ -78,6 +78,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="25dp"
+        android:layout_below="@+id/et_wenzi"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="#F8F8F8">
@@ -105,4 +106,36 @@
             android:textColor="#999999"
             android:textSize="15dp" />
     </LinearLayout>
-</LinearLayout>
+
+    <ImageButton
+        android:id="@+id/ib_tips"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="60dp"
+        android:layout_marginRight="10dp"
+        android:background="@mipmap/tips" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#277DC6" />
+
+        <TextView
+            android:id="@+id/tv_commit"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="提交"
+            android:textColor="#3699ed"
+            android:textSize="18dp" />
+    </LinearLayout>
+
+</RelativeLayout>
