--- a/app/src/main/res/layout/activity_tu_wen.xml
+++ b/app/src/main/res/layout/activity_tu_wen.xml
@@ -50,16 +50,17 @@
             android:textSize="19dp" />
 
         <TextView
-            android:id="@+id/tv_commit"
+            android:id="@+id/tv_menu"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
-            android:text="提交"
+            android:text="···"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
             android:textColor="#ffffff"
-            android:textSize="17dp" />
+            android:textSize="40dp" />
 
     </RelativeLayout>
 
@@ -119,7 +120,7 @@
 
     <RelativeLayout
         android:layout_height="0dp"
-        android:id="@+id/ll_commit"
+        android:id="@+id/rl_commit"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
