--- a/app/src/main/res/layout/pfragment_achieve_todo.xml
+++ b/app/src/main/res/layout/pfragment_achieve_todo.xml
@@ -3,21 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F7F9FA"
     tools:context=".Student.Activity.AchieveTodoFragment">
 
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp">
 
         <com.mpl.GrowthStud.Student.View.LoadMoreListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
             android:divider="@null"
             android:dividerHeight="10dp"
             android:scrollbars="none" />
