--- a/app/src/main/res/layout/fragment_found.xml
+++ b/app/src/main/res/layout/fragment_found.xml
@@ -80,17 +80,17 @@
         android:background="#eeeeee" />
 
     <TextView
-        android:id="@+id/tv_road"
+        android:id="@+id/tv_mybook"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#FFFFFF"
-        android:drawableLeft="@mipmap/tilticion_road"
+        android:drawableLeft="@mipmap/tilticion_mybook"
         android:drawablePadding="10dp"
         android:drawableRight="@mipmap/right_arrow"
         android:gravity="center_vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="成长轨迹"
+        android:text="我的手册"
         android:textColor="#333333"
         android:textSize="17dp" />
 
