--- a/app/src/main/res/menu/menu_order.xml
+++ b/app/src/main/res/menu/menu_order.xml
@@ -4,10 +4,10 @@
     <item
         android:id="@+id/take_photo"
         android:title="拍照上传" />
-    <item
-        android:id="@+id/choose_moban"
-        android:title="选择版式" />
-    <item
-        android:id="@+id/choose_bg"
-        android:title="选择背景" />
+    <!--<item-->
+        <!--android:id="@+id/choose_moban"-->
+        <!--android:title="选择版式" />-->
+    <!--<item-->
+        <!--android:id="@+id/choose_bg"-->
+        <!--android:title="选择背景" />-->
 </menu>
