--- a/app/src/main/res/layout/activity_syatem_achieve.xml
+++ b/app/src/main/res/layout/activity_syatem_achieve.xml
@@ -48,197 +48,235 @@
             android:textColor="#ffffff"
             android:textSize="19dp" />
 
-        <TextView
-            android:id="@+id/tv_commit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
-            android:text="提交"
-            android:textColor="#ffffff"
-            android:textSize="17dp" />
-
 
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="姓名："
-            android:textColor="#999999"
-            android:textSize="17dp" />
-
-        <EditText
-            android:id="@+id/et_username"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="34dp"
-            android:background="@null"
-            android:gravity="center_vertical"
-            android:hint="输入您的姓名"
-            android:textColor="#333333"
-            android:textColorHint="#ffc4c4c4"
-            android:textSize="17dp" />
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#eeeeee" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="性别："
-            android:textColor="#999999"
-            android:textSize="17dp" />
-
-        <TextView
-            android:id="@+id/tv_male"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="34dp"
-            android:layout_marginRight="15dp"
-            android:drawableRight="@mipmap/right_arrow"
-            android:gravity="center_vertical"
-            android:text="选择您的性别"
-            android:textColor="#c4c4c4"
-            android:textSize="17dp" />
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ffffff"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center_vertical"
+                        android:text="姓名："
+                        android:textColor="#999999"
+                        android:textSize="17dp" />
+
+                    <EditText
+                        android:id="@+id/et_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="34dp"
+                        android:background="@null"
+                        android:gravity="center_vertical"
+                        android:hint="输入您的姓名"
+                        android:textColor="#333333"
+                        android:textColorHint="#ffc4c4c4"
+                        android:textSize="17dp" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="#eeeeee" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center_vertical"
+                        android:text="性别："
+                        android:textColor="#999999"
+                        android:textSize="17dp" />
+
+                    <TextView
+                        android:id="@+id/tv_male"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="34dp"
+                        android:layout_marginRight="15dp"
+                        android:drawableRight="@mipmap/right_arrow"
+                        android:gravity="center_vertical"
+                        android:text="选择您的性别"
+                        android:textColor="#c4c4c4"
+                        android:textSize="17dp" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="#eeeeee" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center_vertical"
+                        android:text="生日："
+                        android:textColor="#999999"
+                        android:textSize="17dp" />
+
+                    <TextView
+                        android:id="@+id/tv_birthy"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="34dp"
+                        android:layout_marginRight="15dp"
+                        android:drawableRight="@mipmap/right_arrow"
+                        android:gravity="center_vertical"
+                        android:text="选择您的生日"
+                        android:textColor="#ffc4c4c4"
+                        android:textSize="17dp" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="#eeeeee" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center_vertical"
+                        android:text="属相："
+                        android:textColor="#999999"
+                        android:textSize="17dp" />
+
+                    <TextView
+                        android:id="@+id/tv_animal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="34dp"
+                        android:layout_marginRight="15dp"
+                        android:drawableRight="@mipmap/right_arrow"
+                        android:gravity="center_vertical"
+                        android:text="选择您的属相"
+                        android:textColor="#ffc4c4c4"
+                        android:textSize="17dp" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="#eeeeee" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center_vertical"
+                        android:text="担任职位："
+                        android:textColor="#999999"
+                        android:textSize="17dp" />
+
+                    <EditText
+                        android:id="@+id/et_position"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:background="@null"
+                        android:gravity="center_vertical"
+                        android:hint="填写您在班级担任职位"
+                        android:textColor="#333333"
+                        android:textColorHint="#ffc4c4c4"
+                        android:textSize="17dp" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="#eeeeee" />
+
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#eeeeee" />
-
     <LinearLayout
+        android:id="@+id/rl_commit"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal">
+        android:layout_height="50dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="生日："
-            android:textColor="#999999"
-            android:textSize="17dp" />
-
-        <TextView
-            android:id="@+id/tv_birthy"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="34dp"
-            android:layout_marginRight="15dp"
-            android:drawableRight="@mipmap/right_arrow"
-            android:gravity="center_vertical"
-            android:text="选择您的生日"
-            android:textColor="#ffc4c4c4"
-            android:textSize="17dp" />
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/tab_unchecked" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="提交"
+                android:textColor="@color/tab_checked" />
+        </LinearLayout>
+
     </LinearLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#eeeeee" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="属相："
-            android:textColor="#999999"
-            android:textSize="17dp" />
-
-        <TextView
-            android:id="@+id/tv_animal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="34dp"
-            android:layout_marginRight="15dp"
-            android:drawableRight="@mipmap/right_arrow"
-            android:gravity="center_vertical"
-            android:text="选择您的属相"
-            android:textColor="#ffc4c4c4"
-            android:textSize="17dp" />
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#eeeeee" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="担任职位："
-            android:textColor="#999999"
-            android:textSize="17dp" />
-
-        <EditText
-            android:id="@+id/et_position"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:background="@null"
-            android:gravity="center_vertical"
-            android:hint="填写您在班级担任职位"
-            android:textColor="#333333"
-            android:textColorHint="#ffc4c4c4"
-            android:textSize="17dp" />
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#eeeeee" />
 </LinearLayout>
