--- a/app/src/main/res/layout/complet_achieve_item.xml
+++ b/app/src/main/res/layout/complet_achieve_item.xml
@@ -41,6 +41,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
                 android:textColor="#3699ED" />
+
+
         </LinearLayout>
 
 
@@ -53,8 +55,7 @@
                 android:id="@+id/iv_1"
                 android:layout_width="wrap_content"
                 android:layout_height="10dp"
-                android:layout_gravity="center_vertical"
-                />
+                android:layout_gravity="center_vertical" />
 
             <ImageView
                 android:layout_width="5dp"
