--- a/app/src/main/res/layout/activity_my_book.xml
+++ b/app/src/main/res/layout/activity_my_book.xml
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@mipmap/working_on_it" />
+            android:background="@mipmap/img_work_empty" />
 
         <ImageView
             android:layout_width="match_parent"
@@ -66,8 +66,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="正在建设中，尽请期待"
-            android:textColor="#333333"
+            android:text="暂无数据"
+            android:textColor="@color/grey"
             android:textSize="17dp" />
     </LinearLayout>
 
