修改密码流程

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -57,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="输入您学籍号码"
+        android:text="输入您手机号码"
         android:textColor="#333333"
         android:textSize="19dp" />
 
