--- a/app/src/main/res/layout/activity_form_info.xml
+++ b/app/src/main/res/layout/activity_form_info.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
+    android:id="@+id/rl_1"
     android:orientation="vertical"
     tools:context=".Student.Activity.FormInfoActivity">
 
