--- a/app/src/main/res/layout/fragment_achieve_todo.xml
+++ b/app/src/main/res/layout/fragment_achieve_todo.xml
@@ -6,23 +6,23 @@
     android:background="#F7F9FA"
     tools:context=".Student.Activity.AchieveTodoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeLayout"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="match_parent">
+    <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+    <!--android:id="@+id/swipeLayout"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_marginLeft="10dp"-->
+    <!--android:layout_marginRight="10dp"-->
+    <!--android:layout_marginTop="10dp"-->
+    <!--android:layout_height="match_parent">-->
 
-        <com.mpl.GrowthStud.Student.View.LoadMoreListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@null"
-            android:dividerHeight="10dp"
-            android:scrollbars="none" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    <com.mpl.GrowthStud.Student.View.XListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@null"
+        android:dividerHeight="10dp"
+        android:scrollbars="none" />
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
     <LinearLayout
         android:id="@+id/ll_empty"
