--- a/app/src/main/res/layout/fragment_get_star_info.xml
+++ b/app/src/main/res/layout/fragment_get_star_info.xml
@@ -46,10 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="10dp" />
 
-    <ListView
+    <com.mpl.GrowthStud.Student.View.XListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"></com.mpl.GrowthStud.Student.View.XListView>
 
     <LinearLayout
         android:id="@+id/ll_empty"
