--- a/app/src/main/res/layout/pfragment_achieve_todo.xml
+++ b/app/src/main/res/layout/pfragment_achieve_todo.xml
@@ -7,22 +7,22 @@
     tools:context=".Student.Activity.AchieveTodoFragment">
 
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp">
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+        <!--android:id="@+id/swipeLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginTop="10dp">-->
 
-        <com.mpl.GrowthStud.Student.View.LoadMoreListView
+        <com.mpl.GrowthStud.Student.View.XListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@null"
             android:dividerHeight="10dp"
             android:scrollbars="none" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
     <LinearLayout
         android:id="@+id/ll_empty"
