--- a/app/src/main/res/layout/image_grid_view.xml
+++ b/app/src/main/res/layout/image_grid_view.xml
@@ -8,7 +8,7 @@
     <com.mpl.GrowthStud.Student.View.SquareLayout
         android:id="@+id/iv_image"
         android:layout_width="wrap_content"
-        android:scaleType="fitXY"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY" />
 
 </LinearLayout>
